--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/172e7c409f.js" crossorigin="anonymous"></script> 
 
-    <title>Fylo</title>
+    <title>Fylo - React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
